infra/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theme-based-rag-ingress
  namespace: theme-based-rag-workflow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: theme-based-rag-gateway-service
                port:
                  number: 8080
    - host: theme-based-rag-workflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: theme-based-rag-gateway-service
                port:
                  number: 8080
